--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/liaukou/ReactMentoring#readme",
   "dependencies": {
+    "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -34,8 +37,11 @@
     "babel-preset-stage-2": "^6.24.1",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "jest": "^22.4.3",
     "react-test-renderer": "^16.3.2",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
