--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
   },
   "homepage": "https://github.com/liaukou/ReactMentoring#readme",
   "dependencies": {
-    "express": "^4.16.3",
-    "html-webpack-plugin": "^3.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -34,8 +32,11 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "express": "^4.16.3",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "react-test-renderer": "^16.3.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
