--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "npm run clean && webpack --env.prod",
     "clean": "rm -rf ./dist",
-    "start": "webpack-dev-server",
-    "test": "jest"
+    "start": "webpack-dev-server --port 8085",
+    "test": "jest",
+    "cypress": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/liaukou/ReactMentoring#readme",
   "dependencies": {
+    "babel-jest": "^22.4.3",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -32,13 +34,17 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "express": "^4.16.3",
-    "html-webpack-plugin": "^3.2.0",
     "css-loader": "^0.28.11",
+    "cypress": "^2.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "react-test-renderer": "^16.3.2",
     "style-loader": "^0.21.0",
