--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
     "presets": [
         "env",
+        "es2015",
         "react",
         "stage-2"
     ],
     "plugins": [
-        "babel-plugin-styled-components"
+        "babel-plugin-styled-components",
+        "react-hot-loader/babel"
     ]
 }
