--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
     "presets": [
         "env",
-        "es2015",
         "react",
         "stage-2"
     ],
     "plugins": [
         "babel-plugin-styled-components",
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        "css-modules-transform"
     ]
 }
