--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && webpack --env.prod",
-    "clean": "rm -rf ./dist",
-    "start": "webpack-dev-server --port 8085",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack",
+    "start": "cross-env NODE_ENV=development node ./server",
+    "prod": "cross-env NODE_ENV=production node ./server",
     "test": "jest",
+    "coverage": "jest --coverage",
     "cypress": "cypress open"
   },
   "repository": {
@@ -21,22 +22,25 @@
   },
   "homepage": "https://github.com/liaukou/ReactMentoring#readme",
   "dependencies": {
-    "babel-jest": "^22.4.3",
+    "node-fetch": "^2.1.2",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
-    "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0",
-    "styled-components": "^3.2.6"
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.2.6",
+    "styled-normalize": "^4.0.0",
+    "url-search-params": "^0.10.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-css-modules-transform": "^1.6.1",
     "babel-plugin-styled-components": "^1.5.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -44,6 +48,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
@@ -52,7 +58,9 @@
     "fetch-mock": "^6.4.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "isomorphic-style-loader": "^4.0.0",
     "jest": "^22.4.3",
+    "mini-css-extract-plugin": "^0.4.0",
     "react-hot-loader": "^4.1.3",
     "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.1",
@@ -60,6 +68,11 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-hot-server-middleware": "^0.5.0",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
