--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
     "presets": [
         "env",
         "react",
-        "stage-2"
+        "stage-2",
+        "flow"
     ],
     "plugins": [
         "babel-plugin-styled-components",
