--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prod": "cross-env NODE_ENV=production node ./server",
     "test": "jest",
     "coverage": "jest --coverage",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
@@ -37,6 +39,8 @@
     "url-search-params": "^0.10.0"
   },
   "devDependencies": {
+    "@storybook/react": "^4.0.0-alpha.10",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
@@ -45,6 +49,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -57,6 +62,7 @@
     "express": "^4.16.3",
     "fetch-mock": "^6.4.2",
     "file-loader": "^1.1.11",
+    "flow-bin": "^0.75.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-style-loader": "^4.0.0",
     "jest": "^22.4.3",
